# first-person-shooter

./: .gitmodules  CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/firstpersonshooter/: fpsand.cpp  fpsand.h  tasks.cpp  tasks.h  types.h  vecmath.h
src/firstpersonshooter/components/: appearance.h  fundamental.h
